kubernetes/deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: hash-app

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: angular-app-deployment
  namespace: hash-app
  labels:
    app: angular-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: angular-app
  template:
    metadata:
      labels:
        app: angular-app
    spec:
      containers:
      - name: angular-app
        image: humaidu/angular-nginx:latest
        ports:
        - containerPort: 80
