kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: angular-app-service
  namespace: hash-app
spec:
  selector:
    app: angular-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
